Fix card overflow

--- a/frontend/src/components/elements/button/NextButton/NextButton.module.css
+++ b/frontend/src/components/elements/button/NextButton/NextButton.module.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .button {
@@ -18,7 +19,7 @@
   border-radius: 10rem;
   border: none;
   height: 56px;
-  width: 90%;
+  width: 100%;
 
   /* text */
   font-weight: bold;
